# awesome-fisheye-pinhole-camera-calibration

./: .~镜头标定基本原理、实现及测试报告.docx  CMakeLists.txt  README.md  README.txt  鱼眼镜头标定基本原理、实现及测试报告.docx
config/: config.yaml
include/: SharedHead.h  calibCoreAlgorithm.h
src/: calibCoreAlgorithm.cpp  main_calibrate.cpp
